reiniciando uso de git

--- a/index.html
+++ b/index.html
@@ -16,4 +16,8 @@
    
     <h3> El estudiante ingresara las notas en una serie de examenes y se le indicara su promedio y la condicion final de cursada. Ingresara un "11" cuando haya ingresado la totalidad de las notas y desee calcular el promedio. Los resultados apareceran en consola. La validacion  se mostrara con un  alert.</h3>
    <script src="/javascript/mainjs.js"></script> 
+   <!-- //probando DOM; -->
+    <H1>dom</H1>
+    
+
 </body>
