agregando carpeta imagenes

--- a/index.html
+++ b/index.html
@@ -7,17 +7,27 @@
     <title> Primer entrega Lopez Ares Ciro</title>
 </head>
 <body>
-    <h1>Primer entrega JS</h1>
-    <h2> Condicionales, Ciclos y Funciones</h2>
-    <h4>Alumno: Ciro Lopez Ares  </h4>
-    <h4>Comision: 59955</h4>
-    <h4>Profesor: Daniel Riverol</h4>
-    <h4>Tutor:Juan Martin Haag</h4>
+    <div id="datos"> 
+        <h1>Primer entrega JS</h1>
+        <h2> Condicionales, Ciclos y Funciones</h2>
+        <h4 class="pais">Alumno: Ciro Lopez Ares  </h4>
+        <h4>Comision: 59955</h4>
+        <h4>Profesor: Daniel Riverol</h4>
+        <h4>Tutor:Juan Martin Haag</h4>
+    </div>
    
-    <h3> El estudiante ingresara las notas en una serie de examenes y se le indicara su promedio y la condicion final de cursada. Ingresara un "11" cuando haya ingresado la totalidad de las notas y desee calcular el promedio. Los resultados apareceran en consola. La validacion  se mostrara con un  alert.</h3>
-   <script src="/javascript/mainjs.js"></script> 
+    <h3 id="parrafo" > El estudiante ingresara las notas en una serie de examenes y se le indicara su promedio y la condicion final de cursada. Ingresara un "11" cuando haya ingresado la totalidad de las notas y desee calcular el promedio. Los resultados apareceran en consola. La validacion  se mostrara con un  alert.</h3>
+    <div id="prueba">
+    <ul class= "lista">
+        <li class="pais"> ARG</li>
+        <li class="pais"> UY</li>
+        <li class="pais"> CHI</li>
+        <li class="pais"> COL</li>
+        <li class="pais"> MEX</li>
+        <li class="pais"> CAN</li>
+    </ul >
+</div>
    <!-- //probando DOM; -->
     <H1>dom</H1>
-    
-
+    <script src="/javascript/mainjs.js"></script> 
 </body>
